@@ -1,3 +1,8 @@
+Wed Feb 25 02:28:51 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* string.c (rb_str_chomp_bang): coderange may change.
+	  [ruby-core:22414]
+
 Wed Feb 25 02:17:30 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* string.c (rb_str_delete_bang): should recalculate coderange.
